# Smart_Travel_Planner

./: .dockerignore  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  deps.py  exceptions.py  lifespan.py  logging_config.py  main.py  retries.py  settings.py
backend/app/agents/: __init__.py
backend/app/agents/agent/: __init__.py
backend/app/models/: __init__.py
backend/app/prompts/: __init__.py
backend/app/routes/: agent.py  auth.py
backend/app/schemas/: __init__.py
backend/app/services/: database.py  llm.py  ml.py  rag.py
backend/app/tools/: __init__.py
backend/scripts/: generate_dataset.py  ingest_rag_data.py
data/: destinations_dataset.csv  experiment_results.csv
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Login.jsx  Register.jsx
models/: classifier.joblib
notebooks/: train_classifier.py
notebooks/.ipynb_checkpoints/: train_classifier-checkpoint.ipynb
tests/: test_agent_plan.py  test_all_routes.py  test_schemas.py
